BAŁTEX-11 Poprawki na stronie głównej

--- a/prod/index.html
+++ b/prod/index.html
@@ -11,12 +11,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width initial-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <meta property="og:url" content="http://www.your-domain.com/your-page.html">
+    <meta property="og:url" content="">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Bałtex. Transport międzynarodowy">
     <meta property="og:description" content="Boilerplate - demo description">
     <meta property="og:image" content="">
-    <title>Bałtex. Transport międzynarodowy</title>
+    <title>Transport międzynarodowy | Bałtex</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="shortcut icon" href="assets/images/favicon.ico">
     <link rel="apple-touch-icon" href="assets/images/favicon.png">
@@ -59,7 +59,6 @@
               </div>
               <div class="col-sm-6">
                 <ul class="list-unstyled top-nav">
-                  <li class="top-nav__element top-nav__element--search"><a href="#" class="top-nav__anchor top-nav__anchor--search"> <i aria-hidden="true" class="fa fa-search"></i>Szukaj</a></li>
                   <li class="top-nav__element"><a href="galeria-zdjec" class="top-nav__anchor">Galeria zdjęć</a></li>
                   <li class="top-nav__element"><a href="najczesciej-zadawane-pytania" class="top-nav__anchor">Faq</a></li>
                   <li class="top-nav__element"><a href="kontakt" class="top-nav__anchor">Kontakt</a></li>
@@ -85,7 +84,14 @@
                   <div class="nav-bar__source">
                     <div class="nav-bar__header">
                       <h5 class="nav-bar__title">Bałtex FHU <sup>&#174;</sup></h5>
-                      <h6 class="nav-bar__subtitle"> <a href="/" title="Strona głowna" class="nav-bar__sneakpeak">Strona główna</a><a href="transport-miedzynarodowy" title="Transport międzynarodowy" class="nav-bar__sneakpeak">Transport międzynarodowy</a><a href="sprzedaz-suchej-tarcicy-dab-sosna" title="Sprzedaż tarcicy" class="nav-bar__sneakpeak">Sprzedaż tarcicy</a><a href="magazyn-czasowego-skladowania" title="Magazyn czasowego składowania" class="nav-bar__sneakpeak">Magazyn czasowego składowania</a></h6>
+                      <h6 class="nav-bar__subtitle"><a href="transport-miedzynarodowy" title="Transport międzynarodowy" class="nav-bar__sneakpeak">Transport międzynarodowy</a><a href="sprzedaz-suchej-tarcicy-dab-sosna" title="Sprzedaż tarcicy" class="nav-bar__sneakpeak">Sprzedaż tarcicy</a><a href="magazyn-czasowego-skladowania" title="Magazyn czasowego składowania" class="nav-bar__sneakpeak">Magazyn czasowego składowania</a>
+                      </h6>
+                    </div>
+                    <div id="sb-search" class="sb-search">
+                      <form>
+                        <input id="search" placeholder="Enter your search term..." type="search" value="" name="search" class="sb-search-input">
+                        <input type="submit" value="" class="sb-search-submit"><span class="sb-icon-search"></span>
+                      </form>
                     </div>
                   </div>
                 </div>
@@ -100,8 +106,8 @@
                 <div class="container">
                   <div class="row">
                     <div class="col-xs-12">
-                      <div data-fx="fadeIn" data-time="300" class="main-slider__content animated">
-                        <h2 class="main-slider__title">Posiadamy ponad 12 letnie doświadczenie w&nbsp;branży spedycyjnej</h2><a href="#" title="" class="btn btn-lg btn-second">Czytaj więcej o spedycji</a>
+                      <div data-fx="fadeIn" data-time="20" class="main-slider__content animated">
+                        <h2 class="main-slider__title">Posiadamy ponad 12 letnie doświadczenie w&nbsp;branży spedycyjnej</h2><a href="transport-miedzynarodowy" class="btn btn-lg btn-second">Czytaj więcej o spedycji</a>
                       </div>
                     </div>
                   </div>
@@ -113,8 +119,8 @@
                 <div class="container">
                   <div class="row">
                     <div class="col-xs-12">
-                      <div data-fx="fadeIn" data-time="300" class="main-slider__content animated">
-                        <h2 class="main-slider__title">Cechuje nas&nbsp;doskonała znajomość problematyki celnej</h2><a href="#" title="" class="btn btn-lg btn-second">Jak działa Naszmagazyn</a>
+                      <div data-fx="fadeIn" data-time="20" class="main-slider__content animated">
+                        <h2 class="main-slider__title">Cechuje nas&nbsp;doskonała znajomość problematyki celnej</h2><a href="magazyn-czasowego-skladowania" class="btn btn-lg btn-second">Sprawdź, jak działa nasz magazyn</a>
                       </div>
                     </div>
                   </div>
@@ -126,8 +132,8 @@
                 <div class="container">
                   <div class="row">
                     <div class="col-xs-12">
-                      <div data-fx="fadeIn" data-time="300" class="main-slider__content animated">
-                        <h2 class="main-slider__title">Tarcica pochodzi wyłącznie z&nbsp;własnego przetarcia na&nbsp;nowoczesnych trakach </h2><a href="#" title="" class="btn btn-lg btn-second">Czym jest </a>
+                      <div data-fx="fadeIn" data-time="20" class="main-slider__content animated">
+                        <h2 class="main-slider__title">Tarcica pochodzi wyłącznie z&nbsp;własnego przetarcia na&nbsp;nowoczesnych trakach</h2><a href="sprzedaz-suchej-tarcicy-dab-sosna" class="btn btn-lg btn-second">Przeczytaj o naszej usłudze</a>
                       </div>
                     </div>
                   </div>
@@ -157,6 +163,7 @@
                         <div class="info-box__content">
                           <h5 class="info-box__title">Profil firmy</h5>
                           <p class="info-box__description">Firma <code>Bałtex</code> prowadzi swoją działalność od roku 1994. Pierwszą branżą był transport międzynarodowy. Z czasem firma ewoluowała i zaczęłą również inwestować w magazyn czasowego składowania. Od niedawna zajmujemy się również sprzedażą suchej tarcicy dąb - sosna.</p>
+                          <div class="info-box__link"><a href="#" title="" class="btn btn-lg btn-transparent">Więcej o firmie</a></div>
                         </div>
                       </div>
                     </div>
@@ -182,10 +189,11 @@
                           <ul class="list-unstyled list-header">
                             <li class="list-header__item list-header__item--header">Dokładny adres</li>
                             <li class="list-header__item">Długowola Pierwsza 467 <br> 27-300 Lipsko</li>
-                            <li class="list-header__item">Telefon: 012-345-678</li>
+                            <li class="list-header__item">Telefon:&nbsp;<a href="tel:123456789">123-456-789</a></li>
                             <li class="list-header__item">Fax: 22-33-456-22</li>
                             <li class="list-header__item">E-mail: testowy@testowy.com.pl</li>
                           </ul>
+                          <div class="info-box__link"><a href="#" title="" class="btn btn-lg btn-transparent">Sprawdź mapę </a></div>
                         </div>
                       </div>
                     </div>
