--- a/prod/kontakt.html
+++ b/prod/kontakt.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Bałtex. Transport międzynarodowy">
     <meta property="og:description" content="Boilerplate - demo description">
     <meta property="og:image" content="">
-    <title>Bałtex. Transport międzynarodowy</title>
+    <title>Transport międzynarodowy | Bałtex</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="shortcut icon" href="assets/images/favicon.ico">
     <link rel="apple-touch-icon" href="assets/images/favicon.png">
@@ -98,85 +98,6 @@
             </div>
           </div>
         </nav>
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12">
-              <div class="jumbotron">
-                <h1 class="display-3">Boilerplate v1.0.0</h1>
-                <p class="lead">Przygotwany w oparciu o Bootstrapa w wersji 4.0.0, Jade, Gulpa oraz preprocesor Sass.</p>
-                <hr class="my-2">
-                <p>
-                  Zawiera szereg bibliotek, które pomogę Ci zorganizować pracę nad projektem.
-                  Występują w nim:
-                </p>
-                <ul class="list-unstyled">
-                  <li>- jQuery <code>v1.11.3</code></li>
-                  <li>- device.js <code>v0.2.7</code></li>
-                  <li>- browser.js <code>v0.0.8</code></li>
-                  <li>- jquery.placeholder <code>v2.3.1</code></li>
-                  <li>- jquery.visible</li>
-                </ul>
-                <h2>Struktura projektu</h2>
-                <table class="table table-striped">
-                  <thead> 
-                    <tr>
-                      <td>Folder "DEV"</td>
-                      <td>Folder "PROD"</td>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td> 
-                        <ul class="list-unstyled">
-                          <li>dev
-                            <ul class="list-unstyled">
-                              <li>- fonts</li>
-                              <li>- images</li>
-                              <li>- jade
-                                <ul class="list-unstyled">
-                                  <li>-- config</li>
-                                  <li>-- includes</li>
-                                  <li>-- js</li>
-                                  <li>-- mixins</li>
-                                </ul>
-                              </li>
-                              <li>- js
-                                <ul class="list-unstyled">
-                                  <li>-- plugins</li>
-                                  <li>-- vendor</li>
-                                </ul>
-                              </li>
-                              <li>- sass
-                                <ul class="list-unstyled">
-                                  <li>-- bootstrap</li>
-                                  <li>-- site</li>
-                                </ul>
-                              </li>
-                            </ul>
-                          </li>
-                        </ul>
-                      </td>
-                      <td>
-                        <ul class="list-unstyled">
-                          <li>prod
-                            <ul class="list-unstyled">
-                              <li>- assets
-                                <ul class="list-unstyled">
-                                  <li>-- css</li>
-                                  <li>-- js</li>
-                                </ul>
-                              </li>
-                            </ul>
-                          </li>
-                        </ul>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-        </div>
       </main>
       <footer class="footer">
         <div class="container">
